apps/base/forgejo/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo-frontend
  namespace: forgejo
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`forgejo.local.reinthal.me`)
      kind: Rule
      services:
        - name: forgejo
          port: 3000
  tls:
    secretName: local-reinthal-me-tls
